2007-05-07  Darin Adler  <darin@apple.com>

        Reviewed by Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13602
          Amazon product pages keep repainting over and over again

        * fast/dom/HTMLElement/set-inner-outer-optimization-expected.txt: Added.
        * fast/dom/HTMLElement/set-inner-outer-optimization.html: Added.

2007-05-06  Darin Adler  <darin@apple.com>

        Reviewed by Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13537

        * fast/canvas/drawImage-with-invalid-args.html: Changed to a dumpAsText test.
        Added logging and a negative-size test.
        * fast/canvas/drawImage-with-invalid-args-expected.txt: Updated.

        * fast/canvas/drawImage-with-invalid-args-expected.checksum: Removed.
        * fast/canvas/drawImage-with-invalid-args-expected.png: Removed.

2007-05-06  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Hyatt.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13557
          Crash when dragging selection over absolutely positioned generated content on block element

        * fast/css-generated-content/positioned-background-hit-test-crash-expected.checksum: Added.
        * fast/css-generated-content/positioned-background-hit-test-crash-expected.png: Added.
        * fast/css-generated-content/positioned-background-hit-test-crash-expected.txt: Added.
        * fast/css-generated-content/positioned-background-hit-test-crash.html: Added.

2007-05-06  Alexey Proskuryakov  <ap@webkit.org>

        Reviewed by Darin.

        http://bugs.webkit.org/show_bug.cgi?id=13584
        <script> code wrongly assumes requests can't fail

        * fast/loader/unloadable-script-expected.txt: Added.
        * fast/loader/unloadable-script.html: Added.

2007-05-04  Darin Adler  <darin@apple.com>

        Reviewed by Adele.

        - test for http://bugs.webkit.org/show_bug.cgi?id=12821